2011-10-17  Dirk Pranke  <dpranke@chromium.org>

        fullscreen/video-controls-override.html is still failing on chromium bots.

        Unreviewed, expectations change.

        * platform/chromium/test_expectations.txt:

2011-10-17  Rafael Weinstein  <rafaelw@chromium.org>

        [MutationObservers] Implement WebKitMutationObserver.observe for attributes
        https://bugs.webkit.org/show_bug.cgi?id=68956

        Reviewed by Ryosuke Niwa.

        * fast/mutation/observe-attributes-expected.txt: Added.
        * fast/mutation/observe-attributes.html: Added.

2011-10-17  Dirk Pranke  <dpranke@chromium.org>

        Update chromium gpu baselines for fast/canvas/canvas-composite-transformclip.html .

        Unreviewed, expectations change.

        * platform/chromium/test_expectations.txt:

2011-10-17  Dirk Pranke  <dpranke@chromium.org>

        Remove some expectations that are no longer failing.

        Unreviewed, expectations change.

        * platform/chromium/test_expectations.txt:

2011-10-17  Gavin Barraclough  <barraclough@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=70207
        After deleting __defineSetter__, it is absent but appears in name list

        Reviewed by Darin Adler.

        * fast/js/delete-syntax-expected.txt:
        * fast/js/script-tests/delete-syntax.js:
            - Added test case for getOwnPropertyNames.

2011-09-22  Ojan Vafai  <ojan@chromium.org>

        incorrect height with height:auto and writing-mode:vertical-rl
        https://bugs.webkit.org/show_bug.cgi?id=68497

        Reviewed by David Hyatt.

        I'm not sure I completely understand the changes to the height/width
        of the body/html elements, but the new height/width look correct to me.

        * platform/mac/fast/backgrounds/background-leakage-transforms-expected.txt:
        * platform/mac/fast/table/028-vertical-expected.txt:
        * platform/mac/fast/table/height-percent-test-vertical-expected.txt: