@@ -1,29 +1,0 @@
-<style>
-.container {
-    border: 5px solid red;
-    display: inline-block;
-}
-.box {
-    border: 5px solid;
-    width: 100px;
-    height: 50px;
-}
-</style>
-
-<div>The four boxes below should look identical.</div>
-
-<div class="container">
-    <div class="box"></div>
-</div>
-
-<div class="container">
-    <div class="box"></div>
-</div>
-
-<div class="container">
-    <div class="box"></div>
-</div>
-
-<div class="container">
-    <div class="box"></div>
-</div>
