@@ -1,3 +1,14 @@
+2011-10-17  Ojan Vafai  <ojan@chromium.org>
+
+        Unreviewed, rolling out r97653.
+        http://trac.webkit.org/changeset/97653
+        https://bugs.webkit.org/show_bug.cgi?id=69957
+
+        Caused a number of Chromium failures.
+
+        * rendering/RenderBlock.cpp:
+        (WebCore::RenderBlock::computeBlockPreferredLogicalWidths):
+
 2011-10-17  Rafael Weinstein  <rafaelw@chromium.org>
 
         [MutationObservers] Implement WebKitMutationObserver.observe for attributes
